# SolPlace

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
app/: next.config.ts  package-lock.json  package.json  vercel.json
app/idl/: solplace.json
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/components/: ActivityFeed.tsx  Canvas.tsx  ColorPalette.tsx  Header.tsx
app/src/hooks/: useCanvas.ts  useConnectionStatus.ts  useEphemeralKeypair.ts  usePixelPlace.ts
app/src/lib/: colors.ts  connections.ts  constants.ts  program.ts
app/src/providers/: Providers.tsx
migrations/: deploy.ts
programs/solplace/: Cargo.toml
programs/solplace/src/: errors.rs  lib.rs  state.rs
programs/solplace/src/instructions/: commit_canvas.rs  delegate_canvas.rs  initialize_canvas.rs  mod.rs  place_pixel.rs  undelegate_canvas.rs
scripts/: setup.ts
