[package]
name = "solplace"
version = "0.1.0"
description = "SolPlace — Real-time collaborative pixel canvas on Solana via MagicBlock Ephemeral Rollups"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1" }
bytemuck = { version = "1.14", features = ["derive"] }
ephemeral-rollups-sdk = { version = "0.6.5", features = ["anchor", "disable-realloc"] }
